# vtk_projects

./: .gitignore  CMakeLists.txt  README.md  clang_format.sh  fetch.CMakeLists.txt  qml.qrc  vckpg.CMakeLists.txt  vcpkg.json
docs/: InteractorStyleSwitch.uml  QQuickVTKRenderItem.md  SetInputData_SetInputConnection.md  actor_multiple_levels_of_detail.md  actor_properties.md  actor_transform.md  add_remove_multiple_widget.md  affineWidget.md  angleWidget.md  anti-aliasing.md  append_filter.md  area_picker.md  axesActor.md  basic_data_types.md  billboard_text_actor3D.md  boundingbox.md  boxWidget.md  camera_position.md  captionActor2D.md  cell.md  colorTransferFunction.md  command_observer_for_events_callback.md  connectivity_filter.md  culling.md  decimate_pro.md  distanceWidget.md  extract_point_based_implicit_function_extract_geometry.md  extract_points.md  follower.md  frustum.md  gizmo_camera_orientation_widget.md  glyphs.md  grouping_actors_actor_collection.md  grouping_actors_actor_collection_assembly.md  hierarchical_binning_filter.md  high_resolution_low_resolution_actor.md  interactor_style_switch.md  key_press_interactor.md  lookupTable.md  mask_points.md  (+26 more)
python/: distancewidget.py
qml/: DynamicSplitView.qml  QQuickVTKRender.qml  QtQuickCone.qml  application_window.qml  decimate_bag.qml  dynamic_split_view_main.qml  main.qml  polygon_mesh.qml  qml_pcl.qml  sanbox.qml  sphere.qml  toolbox.qml  vtk_basic.qml  vtkmain.qml
src/: ActorManipulationInteractorStyle.cpp  ActorManipulationInteractorStyle.hpp  ActorProperties.cpp  AddCell.cxx  AffineWidget.cxx  AlignTwoPolyDatas.cxx  AngleWidget.cxx  AngleWidget2D.cxx  AppendFilter.cpp  AreaPicking.cxx  Assembly.cpp  Axes.cxx  BackfaceCulling.cxx  BillboardTextActor3D.cxx  BoundingBox.cpp  Callback.cpp  Camera.cxx  CameraActor.cxx  CameraInteractorStyle.cpp  CameraInteractorStyle.hpp  CameraOrientationWidgetGizmo.cxx  CameraPosition.cpp  CaptionActor2D.cpp  CaptionWidget.cxx  Cell3DDemonstration.cxx  ColorIsosurface.cxx  CommandObserverClass.cpp  CommandObserverFunction.cpp  CompassWidget.cxx  ContourWidget.cxx  CubeAxesActor.cxx  CustomVTKItem.cpp  CustomVTKItem.h  DepthSortPolyData.cxx  DisplayCoordinateAxes.cxx  DisplayTrackball.cpp  DistanceWidget.cxx  DistanceWidget3D.cpp  DownsamplePointCloud.cpp  Follower.cxx  (+130 more)
src/QtQuickBoxWidget/: main.cpp
